# TTA3DCache

./: .gitmodules  README.md  pyproject.toml  requirements.txt  sitecustomize.py
.github/: copilot-instructions.md
.github/prompts/: TTA3DCache_implementation_prompt.md
configs/: answer_cache.yaml  baseline.yaml  default.yaml  full_tta3dcache.yaml  majority_vote.yaml  prototype_cache.yaml
docs/: implementation_report.md  submodule_mapping.md
scripts/: evaluate_predictions.py  inspect_run.py  run_cdviews_baseline.py  run_tta3dcache.py  train.py
src/tta3dcache/: __init__.py  config.py
src/tta3dcache/answers/: __init__.py  confidence.py  equivalence.py  normalization.py
src/tta3dcache/cache/: __init__.py  answer_cache.py  entries.py  prototype_cache.py  pruning.py
src/tta3dcache/engine/: train.py
src/tta3dcache/evaluation/: __init__.py  bootstrap.py  efficiency.py  qa_metrics.py
src/tta3dcache/features/: __init__.py  base.py  pooled_view_encoder.py  question_conditioning.py
src/tta3dcache/integration/: __init__.py  cdviews_adapter.py  dataset_adapter.py  vlm_runner.py
src/tta3dcache/logging/: __init__.py  jsonl_logger.py  run_manifest.py
src/tta3dcache/models/: baseline.py
src/tta3dcache/pipeline/: __init__.py  baseline.py  tta3dcache.py
src/tta3dcache/scoring/: __init__.py  consistency.py  fusion.py  (+2 more)
tests/: __init__.py  test_answer_cache.py  test_answer_normalization.py  test_candidate_sets.py  test_fusion.py  test_overlap_weighting.py  test_pipeline_smoke.py  test_prototype_cache.py  test_template_layout.py
tta3dcache/: __init__.py
(+4 files in other folders)
